Archive/c06b1ac78c08305759566f3ad83d9693-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:9:1: error: expected ';' after class definition
 }
 ^
main.cpp:21:1: error: expected ';' after class definition
 }
 ^
main.cpp:30:1: error: expected ';' after class definition
 }
 ^
